feat: finish up auto crafting table prototype